hphp/test/zend/bad/ext-mbstring/mb_split_empty_match.php
<?php
mb_regex_set_options('m');
var_dump(mb_split('^', "a\nb\nc"));